with chatter and some decoration

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -2,7 +2,14 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "baseUrl": ".",
-        "paths": {}
+        "paths": {
+            "c/featured-tile": [
+                "featuredTile/featuredTile.js"
+            ],
+            "c/image-banner": [
+                "imageBanner/imageBanner.js"
+            ]
+        }
     },
     "include": [
         "**/*",
