--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -3,10 +3,10 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/featured-tile": [
+            "c/featuredTile": [
                 "featuredTile/featuredTile.js"
             ],
-            "c/image-banner": [
+            "c/imageBanner": [
                 "imageBanner/imageBanner.js"
             ]
         }
@@ -14,5 +14,10 @@
     "include": [
         "**/*",
         "../../../../.sfdx/typings/lwc/**/*.d.ts"
-    ]
+    ],
+    "typeAcquisition": {
+        "include": [
+            "jest"
+        ]
+    }
 }
