--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -16,7 +16,8 @@
       "networksEnabled": true,
       "s1DesktopEnabled": true,
       "pathAssistantsEnabled": true,
-      "s1EncryptedStoragePref2": false
+      "s1EncryptedStoragePref2": false,
+      "selfSetPasswordInApi": true
     }
   }
 }
