email address set

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,6 @@
 {
   "orgName": "solutions-engagement",
+  "adminEmail": "platformpmmdemos@gmail.com",
   "edition": "Developer",
   "features": [
     "Communities", "SiteDotCom", "Sites", "Knowledge", "LightningServiceConsole", "ServiceCloud"
