plus new mobile

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -20,6 +20,9 @@
       "pathAssistantsEnabled": true,
       "s1EncryptedStoragePref2": false,
       "selfSetPasswordInApi": true
+    },
+    "mobileSettings": {
+      "enableLightningOnMobile": true
     }
   }
 }
