bot cert is better?

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -5,6 +5,7 @@
   "features": [
     "Chatbot",
     "Communities",
+    "EinsteinAnalyticsPlus",
     "Knowledge",
     "LightningServiceConsole",
     "LiveAgent",
